@@ -7,7 +7,6 @@ Build-Depends: debhelper (>= 13.3~),
  g++ (>= 4:8),
  libsystemd-dev, libdbus-1-dev,
  libcap-dev, libseccomp-dev,
- libboost-dev (>= 1.54),
  libfmt-dev (>= 7),
  libpq-dev (>= 9.6),
  libcurl4-openssl-dev (>= 7.38),
